# switch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  main.rs  opt.rs  switch.rs
